--- a/packages/welcome-to-ts/tsconfig.json
+++ b/packages/welcome-to-ts/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "ES2015",
-    "moduleResolution": "node",
+    "target": "ES2022",
+    "module": "commonjs",
+    "moduleResolution": "node"
   },
   "include": ["src"]
 }
